<resources>
    <string name="app_name">Weather_XML</string>
    <!--    splash scrn-->

    <string name="GET_START">Get Start</string>
    <string name="WEATHER">Weather</string>
    <string name="FORECASTS">ForeCasts</string>
    <string name="PRECEPITATIONS">Precipitations</string>
    <string name="MAX">Max</string>
    <string name="MIN">Min</string>
    <string name="TODAY">Today</string>
    <string name="FEELS_LIKE">Feels Like</string>
    <string name="SEE_MORE">See More …</string>
    <string name="FIVE_DAYS_FORECASTS">5-Days Forecasts</string>
    <string name="SUNRISE">SUNRISE</string>
    <string name="SUNSET">SUNSET</string>
    <string name="SOMETHING_WENT_WRONG">Oho! looks like something went wrong</string>
    <string name="NO_DATA_FOUND_MESSAGE">Unable to serve you at the moment</string>
    <string name="TRY_AGAIN">Try Again</string>
    <string name="ENGLISH">English</string>
    <string name="URDU">Urdu</string>
    <string name="THEME">Theme</string>

</resources>