<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/drawable_gradient_background"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/drawable_gradient_background"
            android:fitsSystemWindows="true">

            <RelativeLayout
                android:id="@+id/no_data_back"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent=".5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".5">

                <LinearLayout
                    android:id="@+id/card_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/image_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/SOMETHING_WENT_WRONG"
                        app:srcCompat="@drawable/ic_no_data" />
                </LinearLayout>


                <TextView
                    android:id="@+id/title_error_data"
                    style="@style/titleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="2"
                    android:minLines="2"
                    android:text="@string/SOMETHING_WENT_WRONG"
                    app:layout_constraintTop_toBottomOf="@id/card_image" />

                <TextView
                    android:id="@+id/sub_title_error_data"
                    style="@style/bodySmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/NO_DATA_FOUND_MESSAGE"
                    app:layout_constraintTop_toBottomOf="@id/title_error_data" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/btn_try_again"
                        style="@style/titleMedium"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginStart="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_40sdp"
                        android:layout_marginEnd="@dimen/_40sdp"
                        android:background="@drawable/drawable_get_start_button"
                        android:gravity="center"
                        android:text="@string/TRY_AGAIN"
                        android:textColor="@color/colorPrimaryDark"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_title_forecasts">

                    </TextView>
                </LinearLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>